[NTP::Push] Ignore tokens received after |StopListening|.

Previously it was possible that GCM returned a token via the callback
after |StopListening| has been called. This could lead to a DCHECK
failing. This CL handles this case. Such a callback call is just
ignored.

Bug: 776251
Change-Id: Idc7c1159af6bbc147097a0df4524ef9b1613c1d9
Reviewed-on: https://chromium-review.googlesource.com/866873
Commit-Queue: vitaliii <vitaliii@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529405}
Former-commit-id: 874a966938f2288ea7be714cb7274950962d0141