components/ntp_snippets/breaking_news/breaking_news_gcm_app_handler_unittest.cc
@@ -44,6 +44,7 @@ using testing::AtMost;
 using testing::ElementsAre;
 using testing::IsEmpty;
 using testing::NiceMock;
+using testing::SaveArg;
 using testing::StrictMock;
 
 namespace ntp_snippets {
@@ -569,6 +570,101 @@ TEST_F(BreakingNewsGCMAppHandlerTest,
   EXPECT_CALL(*mock_subscription_manager(), Subscribe(_)).Times(0);
   EXPECT_CALL(*mock_subscription_manager(), Resubscribe(_)).Times(0);
   task_runner->RunUntilIdle();
+}
+
+TEST_F(BreakingNewsGCMAppHandlerTest,
+       ShouldIgnoreTokenReceivedAfterStopListening) {
+  // The last validation time is used to ensure that GetToken callback is
+  // ignored. Thus, enable validation.
+  SetFeatureParams(/*enable_token_validation=*/true,
+                   /*enable_forced_subscription=*/false);
+
+  // The next validation won't be soon.
+  const base::TimeDelta time_to_validation = base::TimeDelta::FromDays(5);
+  const base::Time last_validation =
+      GetDummyNow() - (GetTokenValidationPeriod() - time_to_validation);
+  pref_service()->SetInt64(prefs::kBreakingNewsGCMLastTokenValidationTime,
+                           SerializeTime(last_validation));
+
+  scoped_refptr<TestMockTimeTaskRunner> task_runner(
+      new TestMockTimeTaskRunner(GetDummyNow(), TimeTicks::Now()));
+  std::unique_ptr<BreakingNewsGCMAppHandler> handler = MakeHandler(task_runner);
+
+  // Save the GetToken callback during the subscription.
+  base::RepeatingCallback<void(const std::string&, InstanceID::Result)>
+      get_token_callback;
+  EXPECT_CALL(*mock_instance_id(), GetToken(_, _, _, _))
+      .WillOnce(SaveArg<3>(&get_token_callback));
+  handler->StartListening(
+      base::BindRepeating(
+          [](std::unique_ptr<RemoteSuggestion> remote_suggestion) {}),
+      base::BindRepeating([]() {}));
+
+  // The client stops listening for the push updates.
+  handler->StopListening();
+
+  // The GCM returns the new token (it does not know that we are not interested
+  // anymore). Imitate an asynchronous call via time delay.
+  task_runner->FastForwardBy(base::TimeDelta::FromSeconds(1));
+  get_token_callback.Run("new_token", InstanceID::Result::SUCCESS);
+
+  // The new token must be completely ignored. It should not be saved.
+  EXPECT_EQ("", pref_service()->GetString(
+                    prefs::kBreakingNewsGCMSubscriptionTokenCache));
+  // The validation should not be rescheduled.
+  EXPECT_EQ(last_validation,
+            DeserializeTime(pref_service()->GetInt64(
+                prefs::kBreakingNewsGCMLastTokenValidationTime)));
+}
+
+TEST_F(BreakingNewsGCMAppHandlerTest,
+       ShouldIgnoreTokenReceivedForValidationAfterStopListening) {
+  SetFeatureParams(/*enable_token_validation=*/true,
+                   /*enable_forced_subscription=*/false);
+
+  // The next validation will be soon.
+  const base::TimeDelta time_to_validation = base::TimeDelta::FromHours(1);
+  const base::Time last_validation =
+      GetDummyNow() - (GetTokenValidationPeriod() - time_to_validation);
+  pref_service()->SetInt64(prefs::kBreakingNewsGCMLastTokenValidationTime,
+                           SerializeTime(last_validation));
+  // Omit receiving the token by putting it there directly.
+  pref_service()->SetString(prefs::kBreakingNewsGCMSubscriptionTokenCache,
+                            "old_token");
+
+  scoped_refptr<TestMockTimeTaskRunner> task_runner(
+      new TestMockTimeTaskRunner(GetDummyNow(), TimeTicks::Now()));
+  std::unique_ptr<BreakingNewsGCMAppHandler> handler = MakeHandler(task_runner);
+  handler->StartListening(
+      base::BindRepeating(
+          [](std::unique_ptr<RemoteSuggestion> remote_suggestion) {}),
+      base::BindRepeating([]() {}));
+
+  task_runner->FastForwardBy(time_to_validation -
+                             base::TimeDelta::FromSeconds(1));
+
+  // Save the GetToken callback during the validation.
+  base::RepeatingCallback<void(const std::string&, InstanceID::Result)>
+      get_token_callback;
+  EXPECT_CALL(*mock_instance_id(), GetToken(_, _, _, _))
+      .WillOnce(SaveArg<3>(&get_token_callback));
+  task_runner->FastForwardBy(base::TimeDelta::FromSeconds(1));
+
+  // The client stops listening for the push updates.
+  handler->StopListening();
+
+  // The GCM returns the new token (it does not know that we are not interested
+  // anymore).
+  task_runner->FastForwardBy(base::TimeDelta::FromSeconds(1));
+  get_token_callback.Run("new_token", InstanceID::Result::SUCCESS);
+
+  // The new token must be completely ignored. It should not be saved.
+  EXPECT_EQ("old_token", pref_service()->GetString(
+                             prefs::kBreakingNewsGCMSubscriptionTokenCache));
+  // The validation should not occur.
+  EXPECT_EQ(last_validation,
+            DeserializeTime(pref_service()->GetInt64(
+                prefs::kBreakingNewsGCMLastTokenValidationTime)));
 }
 
 TEST_F(BreakingNewsGCMAppHandlerTest,
